# ONE-POS-Utilidades

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
app/core/: queue.py  test_print.py  worker.py
app/printer/: manager.py  windows_spooler.py
app/utils/: escpos.py  image.py  network.py  usb_detector.py  usb_printer.py
app/web/: api.py  frontend.py
app/web/frontend/: index.html
app/web/frontend/src/: app.js  styles.css
deploy/: escpos-server.service
printserver/: README.md  capture_traffic.sh  debug_tools.py  main.py  requirements.txt  test_ipp.py
printserver/builld/: build.bat  build.sh  build.spec
printserver/config/: __init__.py  settings.py
printserver/drivers/: README.md  install-linux.sh  install-windows.bat  install-windows.ps1  install.py
printserver/ppd/: ONEPOS-IPP.ppd  ONEPOS-Network-IPP.ppd  ONEPOS-Thermal-IPP.ppd
printserver/server/: __init__.py  converter.py  ipp_parser.py  ipp_server.py  log_printer.py  mdns_announcer.py  port_manager.py  printer_backend.py  utils.py
printserver/tests/: test_converter.py  test_ipp.py  test_print.py  test_printer.py  test_resize.py
printserver/usb/: __init__.py  usb_detector.py  usb_handler.py  usb_printer.py
printtest/: print_usb_lp.py  requirements.txt
test/: detect_printer.py
tests/: conftest.py  test_api.py  test_image.py  test_queue.py
